# 100x-inbound

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_local.ps1
src/: main.py
src/api/: dependencies.py
src/api/v1/: router.py  routes.py
src/api/v1/endpoints/: __init__.py  search_person.py
src/core/: config.py  security.py
src/middlewares/: auth_middleware.py
src/services/: es_service.py  mongo_service.py
src/utils/: logger.py
